everything we just added and whatnot
:D

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 <body>
   <script src="script.js"></script>
   <script src="urmom.js"></script>
+  <script src="player.js"></script>
+  <script src="Levels.js"></script>
+
+
 </body>
 
 </html>
